--- a/index.html
+++ b/index.html
@@ -21,5 +21,357 @@
         <button type="button" class="bt-class">Sell Something</button>
       </div>
     </header>
+    <section class="container">
+      <div class="parent">
+        <div class="box1 aitem-1 wid">
+          <h2>Location</h2>
+          <form class="fm-class">
+            <div>
+              <label for="subscribeNews">Subscribe to newsletter?</label>
+              <input
+                class="ip-class"
+                type="checkbox"
+                id="subscribeNews"
+                name="subscribe"
+                value="newsletter"
+              />
+            </div>
+          </form>
+          <h2>Property</h2>
+          <form action="checkbox" class="form-margin">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Land & Plots for Rent | 9548 </label>
+          </form>
+          <form action="checkbox" class="form-margin">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Houses & Apartments for Sale | 9548</label>
+          </form>
+          <form action="checkbox" class="form-margin">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Land & Plots for Sale | 9548 </label>
+          </form>
+          <form action="checkbox" class="form-margin">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Commercial Property for Rent | 9548</label>
+          </form>
+          <form action="checkbox" class="form-margin">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Commercial Property for Sale | 9548</label>
+          </form>
+          <form action="checkbox" class="form-margin">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Event Centres, Venues & Worksta | 9548 </label>
+          </form>
+          <form action="checkbox" class="form-margin">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Short Let Property | 9548</label>
+          </form>
+          <form action="checkbox" class="form-margin">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Land & Plots for Sale | 9548</label>
+          </form>
+          <form action="checkbox" class="form-margin">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Commercial Property for Rent | 9548 </label>
+          </form>
+          <form action="checkbox" class="form-margin">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Houses & Apartments for Rent </label>
+          </form>
+          <h2>Price range</h2>
+          <form action="checkbox">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">Under 13 K • 2183 ads</label>
+          </form>
+          <form action="checkbox">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">13 - 160 K • 2183 ads</label>
+          </form>
+          <form action="checkbox">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">160 K - 6 M • 2183 ads</label>
+          </form>
+          <form action="checkbox">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">6 - 55 M • 2183 ads</label>
+          </form>
+          <form action="checkbox">
+            <input
+              class="ip-class"
+              type="checkbox"
+              id="subscribeNews"
+              name="subscribe"
+              value="newsletter"
+            />
+            <label for="text">6 - 55 M • 2183 ads</label>
+          </form>
+        </div>
+        <div class="box2 aitem-2">
+          <a href="#"></a>
+        </div>
+      </div>
+    </section>
+    <section class="father">
+      <div class="card">
+        <div class="card-image">
+          <img src="img/section-2.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="img/img-2.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="img/img-3.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="img/section-2.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="img/img-3.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="img/img-2.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="img/img-3.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-image">
+          <img src="img/section-2.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
