--- a/index.html
+++ b/index.html
@@ -191,11 +191,17 @@
           </form>
         </div>
         <div class="box2 aitem-2">
-          <a href="#"></a>
+          <h1>Find the house you want easily</h1>
+          <h3>Buy, sell, rent or lease on just one platform</h3>
+          <div class="search-container">
+            <input type="text" class="search-input" placeholder="Search...">
+            <button class="search-button"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+            </svg></button>
         </div>
       </div>
     </section>
-    <section class="father">
+    <section class="father container">
       <div class="card">
         <div class="card-image">
           <img src="img/section-2.png" alt="Property Image" />
@@ -373,5 +379,34 @@
         </div>
       </div>
     </section>
+    <footer class="container2">
+      <div class="card-footer">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#"> Discover</a></li>
+          <li><a href="#">Contact us </a></li>
+          <li><a href="#">Sing in</a></li>
+        </ul>
+        <li class="li-none">
+          <a href="mailto:someone@example.com">Support@Roberts.com</a>
+        </li>
+        <div class="flex-foter">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">instagram</a></li>
+          <li><a href="#">YouTube</a></li>
+          <li><a href="#">Twitter</a></li>
+        </div>
+      </div>
+      <hr />
+      <div class="center-foter">
+        <ul>
+          <li>
+            <a href="mailto:someone@example.com"
+              >© 2022 Robert.co.ke Gibraltar</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
