add and fix some mobile details

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           </ul>
         </nav>
         <button type="button" class="bt-class">Sell Something</button>
+        <div class="phone-icon"></div>
       </div>
     </header>
     <section class="container">
@@ -408,5 +409,29 @@
         </ul>
       </div>
     </footer>
+    <main class="display-none">
+      <div class="boxbar">
+        <div class="box-item">
+            <span class="icon"><a href="#"><img src="img/house-phone.png" alt="Home"></a></span>
+            <span class="label">Home</span>
+        </div>
+        <div class="box-item">
+            <span class="icon"><a href="#"><img src="img/3dcube-phone.png" alt="3d"> </a></span>
+            <span class="label">Discover</span>
+        </div>
+        <div class="box-item sell">
+            <span class="icon"><a href="#"><img src="img/Frame-phonr.png" alt="frame"> </a></span>
+            <span class="label">Sell</span>
+        </div>
+        <div class="box-item">
+            <span class="icon"><a href="#"><img src="img/message-text-phone.png" alt="Message"></a></span>
+            <span class="label">Message</span>
+        </div>
+        <div class="box-item">
+            <span class="icon"><a href="#"><img src="img/user-phone.png" alt="user"></a></span>
+            <span class="label">Profile</span>
+        </div>
+    </div>
+    </main>
   </body>
 </html>
