--- a/index.html
+++ b/index.html
@@ -8,18 +8,26 @@
   </head>
   <body>
     <header class="container">
-      <div class="hd-class">
-        <a href="#" class="logo"><img src="img/logo.png" alt="logo" /></a>
-        <nav>
+       <div class="main-class">
+        <div class="logo">
+          <a href="file:///C:/Users/user/Desktop/shualeduri/secend.html"><img src="img/logo.png" alt="logo" /></a>
+        </div>
+        <nav class="navbar">
           <ul>
             <li><a href="#" class="after">Home</a></li>
+          </ul>
+          <ul>
             <li><a href="#">Discover</a></li>
+          </ul>
+          <ul>
             <li><a href="#">Contact us</a></li>
+          </ul>
+          <ul>
             <li><a href="#">Sign in</a></li>
           </ul>
         </nav>
         <button type="button" class="bt-class">Sell Something</button>
-        <div class="phone-icon"></div>
+        <div class="phone-icon"><img src="img/search-phone.png" alt="search"></div>
       </div>
     </header>
     <section class="container">
