--- a/secend.html
+++ b/secend.html
@@ -16,10 +16,10 @@
         </div>
         <nav class="navbar">
           <ul>
-            <li><a href="#" class="after">Home</a></li>
+            <li><a href="file:///C:/Users/user/Desktop/shualeduri/index.html">Home</a></li>
           </ul>
           <ul>
-            <li><a href="#">Discover</a></li>
+            <li><a href="#" class="after">Discover</a></li>
           </ul>
           <ul>
             <li><a href="#">Contact us</a></li>
@@ -36,7 +36,7 @@
         <div class="box1 item1"></div>
         <div class="box2 item2">
           <div class="span-class">
-            <span class="vip-tag">VIP TOP+</span>
+            <div class="vip1">VIP TOP+</div>
             <span class="text-span">Posted 1 hour ago</span>
             <span class="view"
               ><img src="img/page2.png" alt="page2" />842 view</span
@@ -57,7 +57,7 @@
             <a href="#">Apartament</a>
             <a href="#">3 bedroom</a>
             <a href="#">2 bathroom</a>
-            <a href="#">Parking</a>
+            <a href="#" class="list-a-none">Parking</a>
           </div>
           <div class="div-lain"></div>
           <div class="aitem-main">
@@ -85,8 +85,175 @@
               <p>220 sq.m.</p>
             </div>
           </div>
+          <div class="div-lain"></div>
+          <div class="last-box">
+            <p><span class="color-span1">1450$</span>/Month</p>
+            <div class="last-sent">
+              <p>Sent message</p>
+            </div>
+            <div class="last-call">
+              <p>Calls</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+    <aside class="container">
+      <h1>Similar ads</h1>
+    </aside>
+    <section class="father container3">
+      <div class="card">
+        <div class="card-image">
+          <img src="img/section-2.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+      <div class="card media-none">
+        <div class="card-image">
+          <img src="img/img-2.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+      <div class="card media-none">
+        <div class="card-image">
+          <img src="img/img-3.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+      <div class="card media-none">
+        <div class="card-image">
+          <img src="img/section-2.png" alt="Property Image" />
+          <div class="vip-tag">VIP TOP+</div>
+        </div>
+        <div class="icone">
+          <div class="card2">
+            <a href="#"><img src="img/Vector.png" alt="vectori" /></a>
+          </div>
+        </div>
+        <div class="card-content">
+          <h2>200 Acres Parcel for Sale in Namanga</h2>
+          <p class="location">Kajiado, Namanga</p>
+          <p class="price">$1450 /<span class="color-span"> Month </span></p>
+          <hr />
+          <div class="property-details">
+            <span>5 Bedroom</span>
+            <span>3 Bathroom</span>
+            <span>450 Sq.m.</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="container2">
+      <div class="card-footer">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#"> Discover</a></li>
+          <li><a href="#">Contact us </a></li>
+          <li><a href="#">Sing in</a></li>
+        </ul>
+        <li class="li-none">
+          <a href="mailto:someone@example.com">Support@Roberts.com</a>
+        </li>
+        <div class="flex-foter">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">instagram</a></li>
+          <li><a href="#">YouTube</a></li>
+          <li><a href="#">Twitter</a></li>
+        </div>
+      </div>
+      <hr />
+      <div class="center-foter">
+        <ul>
+          <li>
+            <a href="mailto:someone@example.com"
+              >© 2022 Robert.co.ke Gibraltar</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
+     <main class="display-none">
+      <div class="boxbar">
+        <div class="box-item">
+          <span class="icon"
+            ><a href="file:///C:/Users/user/Desktop/shualeduri/secend.html"><img src="img/house-phone.png" alt="Home" /></a
+          ></span>
+          <span class="label">Home</span>
+        </div>
+        <div class="box-item">
+          <span class="icon"
+            ><a href="#"><img src="img/3dcube-phone.png" alt="3d" /> </a
+          ></span>
+          <span class="label">Discover</span>
+        </div>
+        <div class="box-item sell">
+          <span class="icon"
+            ><a href="#"><img src="img/Frame-phonr.png" alt="frame" /> </a
+          ></span>
+          <span class="label">Sell</span>
+        </div>
+        <div class="box-item">
+          <span class="icon"
+            ><a href="#"
+              ><img src="img/message-text-phone.png" alt="Message" /></a
+          ></span>
+          <span class="label">Message</span>
+        </div>
+        <div class="box-item">
+          <span class="icon"
+            ><a href="#"><img src="img/user-phone.png" alt="user" /></a
+          ></span>
+          <span class="label">Profile</span>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
