--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header class="container">
        <div class="main-class">
         <div class="logo">
-          <a href="file:///C:/Users/user/Desktop/shualeduri/secend.html"><img src="img/logo.png" alt="logo" /></a>
+          <a href="#"><img src="img/logo.png" alt="logo" /></a>
         </div>
         <nav class="navbar">
           <ul>
             <li><a href="#" class="after">Home</a></li>
           </ul>
           <ul>
-            <li><a href="#">Discover</a></li>
+            <li><a href="file:///C:/Users/user/Desktop/shualeduri/secend.html">Discover</a></li>
           </ul>
           <ul>
             <li><a href="#">Contact us</a></li>
@@ -210,6 +210,9 @@
         </div>
       </div>
     </section>
+    <aside class="container">
+      <h2>Trending ads</h2>
+    </aside>
     <section class="father container">
       <div class="card">
         <div class="card-image">
@@ -436,7 +439,7 @@
             <span class="label">Message</span>
         </div>
         <div class="box-item">
-            <span class="icon"><a href="#"><img src="img/user-phone.png" alt="user"></a></span>
+            <span class="icon"><a href="file:///C:/Users/user/Desktop/shualeduri/secend.html"><img src="img/user-phone.png" alt="user"></a></span>
             <span class="label">Profile</span>
         </div>
     </div>
