change links and DONE

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#" class="after">Home</a></li>
           </ul>
           <ul>
-            <li><a href="file:///C:/Users/user/Desktop/shualeduri/secend.html">Discover</a></li>
+            <li><a href="https://wollex20.github.io/shualeduri/secend">Discover</a></li>
           </ul>
           <ul>
             <li><a href="#">Contact us</a></li>
@@ -427,7 +427,7 @@
             <span class="label">Home</span>
         </div>
         <div class="box-item">
-            <span class="icon"><a href="#"><img src="img/3dcube-phone.png" alt="3d"> </a></span>
+            <span class="icon"><a href="https://wollex20.github.io/shualeduri/secend"><img src="img/3dcube-phone.png" alt="3d"> </a></span>
             <span class="label">Discover</span>
         </div>
         <div class="box-item sell">
