--- a/secend.html
+++ b/secend.html
@@ -10,13 +10,13 @@
     <header class="container">
       <div class="main-class">
         <div class="logo">
-          <a href="file:///C:/Users/user/Desktop/shualeduri/secend.html"
+          <a href="https://wollex20.github.io/shualeduri/"
             ><img src="img/logo.png" alt="logo"
           /></a>
         </div>
         <nav class="navbar">
           <ul>
-            <li><a href="file:///C:/Users/user/Desktop/shualeduri/index.html">Home</a></li>
+            <li><a href="https://wollex20.github.io/shualeduri/">Home</a></li>
           </ul>
           <ul>
             <li><a href="#" class="after">Discover</a></li>
@@ -224,7 +224,7 @@
       <div class="boxbar">
         <div class="box-item">
           <span class="icon"
-            ><a href="file:///C:/Users/user/Desktop/shualeduri/secend.html"><img src="img/house-phone.png" alt="Home" /></a
+            ><a href="https://wollex20.github.io/shualeduri/"><img src="img/house-phone.png" alt="Home" /></a
           ></span>
           <span class="label">Home</span>
         </div>
